--- a/styles.css
+++ b/styles.css
@@ -82,12 +82,16 @@ body{
   background: linear-gradient(90deg, #444, #666);
 }
 .logo {
-  width: 200px; /* увеличь число для ещё большего логотипа */
+  width: 300px; /* увеличь число для ещё большего логотипа */
   height: auto;
   display: block;
   margin: 20px auto;
 }
-
+.hero {
+  width: 300px; /* увеличь число для ещё большего логотипа */
+  height: auto;
+  display: block;
+  margin: 20px auto;
 }
 .section {
   margin: 50px auto;
